--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Directeg</title>
-
+    <link rel='icon' href='img/logo.png' type='image/x-icon'/>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -105,5 +105,19 @@
     </div>
 </section>
 <!-- end of form -->
+<footer>
+    <div class="container">
+        <div class="copyright">
+            <h3>
+                <a href="#">
+                    Copyright© Direct. All Rights Reserved.terms&conditions
+                </a>
+            </h3>
+        </div>
+        <div class="copyright-logo">
+            <img src="img/footer-logo.png" alt="footer-logo">
+        </div>
+    </div>
+</footer>
 </body>
 </html>
