we added about-us page with reposive design

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
      </div>
         <nav class="nav-bottom">
             <ul>
-                <li><a href="#">
+                <li><a href="index.html">
                     Home
                 </a></li>
-                <li><a href="#">
+                <li><a href="about-us.html">
                     About Us
                 </a></li>
                 <li><a href="#">
@@ -119,5 +119,7 @@
         </div>
     </div>
 </footer>
+<script src="js/jquery.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
