we added info page and finished it except responsive side

--- a/my-hotel-info.html
+++ b/my-hotel-info.html
@@ -7,7 +7,7 @@
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/about/custom-style.css">
+    <link rel="stylesheet" href="css/info/custom-style.css">
 
 </head>
 <body>
@@ -87,93 +87,51 @@
 <section id="sections">
 
     <div class="container">
+        <div class="section-back">
+            <a href="about-us.html">Back to Sections</a>
+        </div>
         <div class="section-title">
             <h2><a href="#">
-                Hotel Sections
+                My Hotel Info:
             </a></h2>
         </div>
-        <div class="section-row">
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        My Hotel Info
-                    </a>
-                </h2>
-            </div>
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        My Hotel Guests Report
-                    </a>
-                </h2>
-            </div>
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        Hotel Cities Report                    </a>
-                </h2>
-            </div>
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        Hotel Rooms Report
-                    </a>
-                </h2>
-            </div>
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        Offer Of The Month
-                    </a>
-                </h2>
-            </div>
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        Withdraw Profits                    </a>
-                </h2>
-            </div>
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        My Hotel Info
-                    </a>
-                </h2>
-            </div>
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        My Hotel Guests Report
-                    </a>
-                </h2>
-            </div>
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        Hotel Cities Report                    </a>
-                </h2>
-            </div>
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        Hotel Rooms Report
-                    </a>
-                </h2>
-            </div>
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        Offer Of The Month
-                    </a>
-                </h2>
-            </div>
-            <div class="section-field">
-                <h2>
-                    <a href="#">
-                        Withdraw Profits                    </a>
-                </h2>
-            </div>
-
+        <div class="hotel-info">
+            <h3>
+                Hotel Owner Name :
+                <span>xxxxxx</span>
+            </h3>
+            <h3>
+                Email : Phone :
+                <span>xxxxxx</span>
+            </h3>
+            <h3>
+                 Phone :
+                <span>xxxxxx</span>
+            </h3>
+            <h3>
+                Birth Date :
+                <span>xxxxxx</span>
+            </h3>
+            <h3>
+                Country :
+                <span>xxxxxx</span>
+            </h3>
+            <h3>
+                Gender :
+                <span>xxxxxx</span>
+            </h3>
+            <h3>
+                Hotel Open Date :
+                <span>xxxxxx</span>
+            </h3>
+            <h3>
+                Your Hotel Number :
+                <span>xxxxxx</span>
+            </h3>
+            <h3>
+                You Have Registered as a Guest in Hotel Number :
+                <span>xxxxxx</span>
+            </h3>
         </div>
     </div>
 </section>
