we edit last line

--- a/about-us.html
+++ b/about-us.html
@@ -95,21 +95,21 @@
         <div class="section-row">
             <div class="section-field">
                 <h2>
-                    <a href="#">
+                    <a href="my-hotel-info.html">
                         My Hotel Info
                     </a>
                 </h2>
             </div>
             <div class="section-field">
                 <h2>
-                    <a href="#">
+                    <a href="my-hotel-info.html">
                         My Hotel Guests Report
                     </a>
                 </h2>
             </div>
             <div class="section-field">
                 <h2>
-                    <a href="#">
+                    <a href="my-hotel-info.html">
                         Hotel Cities Report                    </a>
                 </h2>
             </div>
