--- a/about-us.html
+++ b/about-us.html
@@ -196,7 +196,7 @@
             </h3>
         </div>
         <div class="copyright-logo">
-            <img src="img/footer-logo.png" alt="footer-logo">
+            <img src="img/footer-logo.png"  class="wow rotateIn" data-wow-duraton="2s"  alt="footer-logo">
         </div>
     </div>
 </footer>
