--- a/contact.html
+++ b/contact.html
@@ -93,14 +93,14 @@
 <!-- start of form-->
 <section id="form">
     <div class="form-title">
-        <h2 class="wow fadeInDown" data-wow-delay="1s" data-wow-duration="2s"><a href="#">
+        <h2 class="wow rotateOut"  data-wow-duration="2s"><a href="#">
             Contact Us
         </a></h2>
-        <p  class="wow fadeInRight" data-wow-delay="2s" data-wow-duration="2s">
+        <p  class="wow rotateInDownRight"  data-wow-duration="2s">
             if there is any problem with your hotel account
             do not hesitate to contact us
         </p>
-        <p class="wow fadeInRight" data-wow-delay="3s" data-wow-duration="3s"><strong>
+        <p class="wow rotateInDownLeft"  data-wow-duration="2s"><strong>
             support@pyramid-challenge.com
         </strong></p>
     </div>
@@ -108,18 +108,18 @@
     <div class="container">
 
         <form action="#" class="form">
-            <div class="form-group wow fadeInRight" data-wow-delay="2s" data-wow-duration="2s">
+            <div class="form-group wow rotateOutUpRight" data-wow-duration="2s">
                 <label for="name"></label>
                 <input type="text" class="form-control" id="name" placeholder="Full Name">
             </div>
-            <div class="form-group wow fadeInUp" data-wow-delay="4s" data-wow-duration="4s">                <label for="email"></label>
+            <div class="form-group wow rotateOutUpLeft" data-wow-duration="2s">                <label for="email"></label>
                 <input type="email" class="form-control" id="email" placeholder="Email">
             </div>
-            <div class="form-group wow fadeOutLeftBig" data-wow-delay="4s" data-wow-duration="4s">
-                <label for="number"></label>
-                <input type="number" class="form-control" id="number" placeholder="Number">
+            <div class="form-group wow rotateOutUpRight" data-wow-duration="2s">
+                <label for="text"></label>
+                <input type="text" class="form-control" id="text" placeholder="Number">
             </div>
-       <div class="form-group wow fadeOut" data-wow-delay="4s" data-wow-duration="4s">
+       <div class="form-group wow fadeOut"  data-wow-duration="2s">
            <select name="option" id="option">
                <option value="#">What is your issue ?</option>
                <option value="#">Logging into Account</option>
@@ -127,7 +127,7 @@
                <option value="#">Information</option>
            </select>
        </div>
-            <div class="form-group wow fadeOutUp" data-wow-delay="4s" data-wow-duration="4s">                <textarea name="#" id="textarea" cols="100" rows="10">
+            <div class="form-group wow fadeOutUp"  data-wow-duration="2s">                <textarea name="#" id="textarea" cols="100" rows="10">
                     Lets know what you need help with....
                 </textarea>
             </div>
@@ -146,7 +146,7 @@
             </h3>
         </div>
         <div class="copyright-logo">
-            <img src="img/footer-logo.png" alt="footer-logo">
+            <img src="img/footer-logo.png"  class="wow rotateIn" data-wow-duraton="2s"  alt="footer-logo">
         </div>
     </div>
 </footer>
