--- a/empty.html
+++ b/empty.html
@@ -110,7 +110,7 @@
                 </a>
             </h3>
         </div>
-        <div class="copyright-logo wow fadeInLeft" data-wow-delay="2s" data-wow-duration="2s">
+        <div class="copyright-logo wow fadeInLeft" data-wow-duration="2s">
             <img src="img/footer-logo.png" alt="footer-logo">
         </div>
     </div>
