--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
     <div class="container">
 
     <form action="#" class="form">
-            <div class="form-group wow slideOutUp"  data-wow-duration="1s" >
+            <div class="form-group wow rotateInUpLeft"  data-wow-duration="1s" >
                 <label for="number"></label>
                 <input type="text" class="form-control" id="number" placeholder="Enter your hotel number">
             </div>
-            <div class="form-group wow slideOutUp"  data-wow-duraton="1s">
+            <div class="form-group wow rotateInUpLeft"  data-wow-duraton="1s">
                 <label for="password"></label>
                 <input type="password" class="form-control"  id="password" placeholder="Enter your hotel password">
             </div>
-            <button class="submit wow slideOutUp"  data-wow-duraton="2s"  >Sign Up</button>
+            <button class="submit wow rollOut"  data-wow-duraton="1s"  >Sign Up</button>
         </form>
     </div>
 </section>
@@ -123,7 +123,7 @@
             </h3>
         </div>
         <div class="copyright-logo">
-            <img src="img/footer-logo.png"  class="wow fadeInLeftBig" data-wow-duraton="2s"  alt="footer-logo">
+            <img src="img/footer-logo.png"  class="wow rotateIn" data-wow-duraton="2s"  alt="footer-logo">
         </div>
     </div>
 </footer>
