--- a/my-hotel-info.html
+++ b/my-hotel-info.html
@@ -6,6 +6,7 @@
 
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
+    <link rel="stylesheet" href='css/animate.css'>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/info/custom-style.css">
 
@@ -37,8 +38,8 @@
             <!--        logo -->
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
-                <div class="text-second-logo">
-                    <h2>
+                <div class="text-second-logo" >
+                    <h2  class="wow slideInLeft" data-wow-duration="1s" data-wow-delay="1s">
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
@@ -50,7 +51,13 @@
             <!--        second logo -->
             <div class="addational-register">
                 <div class="language btn">
-                    <a  href="#">English</a>
+                    <label for="language-switcher"></label>
+                    <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" data-wow-delay="1s">
+                        <option value="#">
+                            English</option>
+                        <option value="#">Arabic</option>
+
+                    </select>
                 </div>
                 <div class="register btn">
                     <a  href="#">Register New Guest</a>
@@ -62,20 +69,20 @@
             <!--        addational-register-->
         </div>
         <nav class="nav-bottom">
-            <ul>
+            <ul class="wow fadeInDownBig" data-wow-duration="1s" data-wow-delay="1s">
                 <li><a href="index.html">
                     Home
                 </a></li>
                 <li><a href="about-us.html">
                     About Us
                 </a></li>
-                <li><a href="#">
+                <li><a href="empty.html">
                     Buy Digital Key
                 </a></li>
-                <li><a href="#">
+                <li><a href="empty.html">
                     FAQ
                 </a></li>
-                <li><a href="#">
+                <li><a href="contact.html">
                     Contact Us
                 </a></li>
             </ul>
@@ -96,39 +103,39 @@
             </a></h2>
         </div>
         <div class="hotel-info">
-            <h3>
+            <h3 class="wow rotateOut" data-wow-duration="1s">
                 Hotel Owner Name :
                 <span>xxxxxx</span>
             </h3>
-            <h3>
+            <h3 class="wow rotateOut" data-wow-duration="1s">
                 Email : Phone :
                 <span>xxxxxx</span>
             </h3>
-            <h3>
+            <h3 class="wow rotateOut" data-wow-duration="1s">
                  Phone :
                 <span>xxxxxx</span>
             </h3>
-            <h3>
+            <h3 class="wow rotateOut" data-wow-duration="1s">
                 Birth Date :
                 <span>xxxxxx</span>
             </h3>
-            <h3>
+            <h3 class="wow rotateOut" data-wow-duration="1s">
                 Country :
                 <span>xxxxxx</span>
             </h3>
-            <h3>
+            <h3 class="wow rotateOut" data-wow-duration="1s">
                 Gender :
                 <span>xxxxxx</span>
             </h3>
-            <h3>
+            <h3 class="wow rotateOut" data-wow-duration="1s">
                 Hotel Open Date :
                 <span>xxxxxx</span>
             </h3>
-            <h3>
+            <h3 class="wow rotateOut" data-wow-duration="1s">
                 Your Hotel Number :
                 <span>xxxxxx</span>
             </h3>
-            <h3>
+            <h3 class="wow rotateOut" data-wow-duration="1s">
                 You Have Registered as a Guest in Hotel Number :
                 <span>xxxxxx</span>
             </h3>
@@ -151,6 +158,7 @@
     </div>
 </footer>
 <script src="js/jquery.js"></script>
+<script src="js/wow.min.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
