--- a/contact.html
+++ b/contact.html
@@ -113,8 +113,11 @@
                <option value="#">Information</option>
            </select>
        </div>
-            <div class="form-group wow fadeOutUp"  data-wow-duration="2s">                <textarea name="#" id="textarea" cols="100" rows="10">
-                    Lets know what you need help with....
+            <div class="form-group wow fadeOutUp"  data-wow-duration="2s" >
+                <label for="textarea"></label>
+                <textarea name="#" id="textarea" cols="50" rows="10" >
+                Message....
+
                 </textarea>
             </div>
             <button class="submit">Sign Up</button>
