we added some pages of sections(room and cities) with Responsive designs

--- a/hotek-guest.html
+++ b/hotek-guest.html
@@ -85,7 +85,7 @@
 <section id="sections-hotel">
     <div class="container">
         <div class="section-back">
-            <a href="about-us.html">Back to Sections</a>
+            <a href="about-us.html">Back to Hotel  Sections</a>
         </div>
     </div>
 </section>
