--- a/my-hotel-info.html
+++ b/my-hotel-info.html
@@ -83,7 +83,7 @@
 -->
     <div class="container">
         <div class="section-back">
-            <a href="about-us.html">Back to Sections</a>
+            <a href="about-us.html">Back to Hotel  Sections</a>
         </div>
         <div class="section-title">
             <h2><a href="#">
