--- a/cities.html
+++ b/cities.html
@@ -8,7 +8,7 @@
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/business-commitment.css">
+    <link rel="stylesheet" href="css/info/cities.css">
     <style>
         #sections{
             padding-top: 40px !important;
@@ -90,27 +90,12 @@
     </div>
     <div class="container">
         <div class="hotel-info">
-            <h3 class="wow rotateOut" data-wow-duration="1s">
-                you have determined your business commit
+            <h3 class="wow fadeOutLeft" data-wow-duration="1s">
+                <a href="#">
+                    Hotel Cities Report
+                </a>
+            </h3>
 
-            </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
-                your goal ( your dream)  :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
-                your financial goal :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
-                registered guests from your hotel number :
-                <span>xxxxxx</span>
-            </h3>
-            <p>
-                you can increase your hotel profits any time , by registered more guests from your hotel number
-
-                the following table shows your hotel maximum profits  , depending on number of guests that will be registered  from your hotel number
-            </p>
         </div>
     </div>
 </section>
@@ -194,52 +179,66 @@
         <table>
             <tr>
 
-                <th>Your Hotel Guest</th>
-                <th>Hotel maximum profits</th>
+                <th>Hotel Cities</th>
+                <th>Registered Guests in City</th>
 
             </tr>
             <tr>
-                <td>1  Guest</td>
-                <td>100$</td>
-
-
-            </tr>
-            <tr>
-                <td>2 Guests</td>
-                <td>1000$</td>
+                <td>City 1</td>
+                <td></td>
 
 
             </tr>
             <tr>
-                <td>3 Guests</td>
-                <td>30,000$</td>
+                <td>City 2</td>
+                <td></td>
 
 
             </tr>
             <tr>
-                <td>4 Guests</td>
-                <td>40,000</td>
+                <td>City 3</td>
+                <td></td>
 
 
             </tr>
             <tr>
-                <td>5 Guests</td>
-                <td>50,000</td>
+                <td>City 4</td>
+                <td></td>
 
 
             </tr>
             <tr>
-                <td>6 Guests</td>
-                <td>60,000</td>
+                <td>City 5</td>
+                <td></td>
 
 
             </tr>
             <tr>
-                <td>7 Guests</td>
-                <td>$ open limit</td>
+                <td>City 6</td>
+                <td></td>
+
 
             </tr>
+            <tr>
+                <td>City 7</td>
+                <td></td>
 
+            </tr>
+            <tr>
+                <td>City 8</td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>City 9</td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>City 10</td>
+                <td></td>
+
+            </tr>
         </table>
     </div>
 </section>
