--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -8,7 +8,7 @@
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/business-commitment.css">
+    <link rel="stylesheet" href="css/info/hotel-room.css">
     <style>
         #sections{
             padding-top: 40px !important;
@@ -90,156 +90,146 @@
     </div>
     <div class="container">
         <div class="hotel-info">
-            <h3 class="wow rotateOut" data-wow-duration="1s">
-                you have determined your business commit
+            <h3 class="wow fadeOutLeft" data-wow-duration="1s">
+                <a href="#">
+                    Hotel Rooms Report
+                </a>
+            </h3>
 
-            </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
-                your goal ( your dream)  :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
-                your financial goal :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
-                registered guests from your hotel number :
-                <span>xxxxxx</span>
-            </h3>
-            <p>
-                you can increase your hotel profits any time , by registered more guests from your hotel number
-
-                the following table shows your hotel maximum profits  , depending on number of guests that will be registered  from your hotel number
-            </p>
         </div>
     </div>
 </section>
-<!--
-
-<section id="sections">
-
-    Your Business Commitment
-    you have determined your business commit
-
-    your goal ( your dream) : xxxx
-
-    your financial goal : xxxx
-
-    registered guests from your hotel number : xxxx
-
-
-
-
-
-    you can increase your hotel profits any time , by registered more guests from your hotel number
-
-    the following table shows your hotel maximum profits  , depending on number of guests that will be registered  from your hotel number
-
-<div class="container">
-    <div class="section-back">
-        <a href="about-us.html">Back to Sections</a>
-    </div>
-    <div class="section-title">
-        <h2><a href="#">
-            My Hotel Info:
-        </a></h2>
-    </div>
-    <div class="hotel-info">
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Hotel Owner Name :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Email : Phone :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Phone :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Birth Date :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Country :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Gender :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Hotel Open Date :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Your Hotel Number :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            You Have Registered as a Guest in Hotel Number :
-            <span>xxxxxx</span>
-        </h3>
-    </div>
-</div>
-</section>
--->
 <!-- end of form -->
 <!-- end of nav-->
 <!-- Table -->
 <section class="hotel-guest">
     <div class="container">
-
+        <div class="options">
+            <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required="">
+                <option value="" disabled="" class="Fbuif _2UHxr">view guest rooms in your hotel cities</option>
+                <option >view guest rooms in city no : 1</option>
+                <option >view guest rooms in city no : 2</option>
+                <option >view guest rooms in city no : 3</option>
+                <option >view guest rooms in city no : 4</option>
+                <option >view guest rooms in city no : 5</option>
+                <option >view guest rooms in city no : 6</option>
+                <option >view guest rooms in city no : 7</option>
+                <option >view guest rooms in city no : 8</option>
+                <option >view guest rooms in city no : 9</option>
+                <option >view guest rooms in city no : 10</option></select>
+        </div>
         <table>
             <tr>
-
-                <th>Your Hotel Guest</th>
-                <th>Hotel maximum profits</th>
-
-            </tr>
-            <tr>
-                <td>1  Guest</td>
-                <td>100$</td>
-
+                <th>#</th>
+                <th>Guest Name</th>
+                <th>Room number</th>
+                <th>Room open date</th>
+                <th>Guest Country</th>
+                <th>Registered in hotel np</th>
+                <th>His Hotel Guests</th>
 
             </tr>
             <tr>
-                <td>2 Guests</td>
-                <td>1000$</td>
-
-
-            </tr>
-            <tr>
-                <td>3 Guests</td>
-                <td>30,000$</td>
+                <td>1</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
 
 
             </tr>
             <tr>
-                <td>4 Guests</td>
-                <td>40,000</td>
-
-
-            </tr>
-            <tr>
-                <td>5 Guests</td>
-                <td>50,000</td>
-
+                <td>2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
 
             </tr>
             <tr>
-                <td>6 Guests</td>
-                <td>60,000</td>
-
+                <td>3</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
 
             </tr>
             <tr>
-                <td>7 Guests</td>
-                <td>$ open limit</td>
+                <td>4</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
 
             </tr>
+            <tr>
+                <td>5</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
 
+            </tr>
+            <tr>
+                <td>6</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>7</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>8</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>9</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>10</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
         </table>
     </div>
 </section>
