we added some animations to pages

--- a/my-hotel-info.html
+++ b/my-hotel-info.html
@@ -26,7 +26,7 @@
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
                 <div class="text-second-logo" >
-                    <h2  class="wow slideInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                    <h2  class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
@@ -39,7 +39,7 @@
             <div class="addational-register">
                 <div class="language btn">
                     <label for="language-switcher"></label>
-                    <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" data-wow-delay="1s">
+                    <select name="#" id="language-switcher" class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
                         <option value="#">
                             English</option>
                         <option value="#">Arabic</option>
@@ -56,7 +56,7 @@
             <!--        addational-register-->
         </div>
         <nav class="nav-bottom">
-            <ul class="wow fadeInDownBig" data-wow-duration="1s" data-wow-delay="1s">
+            <ul class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
                 <li><a href="index.html">
                     Home
                 </a></li>
@@ -76,6 +76,7 @@
         </nav>
     </div>
 </section>
+
 <!-- end of nav-->
 <!-- start of form-->
 <section id="sections">
@@ -91,39 +92,37 @@
             </a></h2>
         </div>
         <div class="hotel-info">
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1s">
                 Hotel Owner Name :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
                 Email : Phone :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
                  Phone :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
                 Birth Date :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="4s">
                 Country :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="4s" >
                 Gender :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="5s">
                 Hotel Open Date :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
-                Your Hotel Number :
-                <span>xxxxxx</span>
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="5s">
             </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="6s">
                 You Have Registered as a Guest in Hotel Number :
                 <span>xxxxxx</span>
             </h3>
