--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,7 @@
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
                 <div class="text-second-logo" >
-                    <h2  class="wow slideInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                    <h2  class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
@@ -37,7 +37,7 @@
             <div class="addational-register">
                 <div class="language btn">
                     <label for="language-switcher"></label>
-                    <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" data-wow-delay="1s">
+                    <select name="#" id="language-switcher" class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
                         <option value="#">
                             English</option>
                         <option value="#">Arabic</option>
@@ -54,7 +54,7 @@
             <!--        addational-register-->
         </div>
         <nav class="nav-bottom">
-            <ul class="wow fadeInDownBig" data-wow-duration="1s" data-wow-delay="1s">
+            <ul class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
                 <li><a href="index.html">
                     Home
                 </a></li>
@@ -86,81 +86,80 @@
             </a></h2>
         </div>
         <div class="section-row">
-            <div class="section-field wow rotateIn" data-wow-duration="2s">
+            <div class="section-field wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <h2>
                     <a href="my-hotel-info.html">
                         My Hotel Info
                     </a>
                 </h2>
             </div>
-            <div class="section-field wow rotateIn" data-wow-duration="2s">
+            <div class="section-field wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
                 <h2>
-                    <a href="my-hotel-info.html">
+                    <a href="hotek-guest.html">
                         My Hotel Guests Report
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow rotateIn" data-wow-duration="2s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="3s">
                 <h2>
-                    <a href="my-hotel-info.html">
+                    <a href="cities.html">
                         Hotel Cities Report                    </a>
                 </h2>
             </div>
-            <div class="section-field  wow rotateIn" data-wow-duration="2s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="4s">
                 <h2>
-                    <a href="#">
+                    <a href="hotel-rooms.html">
                         Hotel Rooms Report
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow rotateIn" data-wow-duration="2s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="5s">
                 <h2>
                     <a href="#">
                         Offer Of The Month
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow rotateIn" data-wow-duration="2s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="5s">
                 <h2>
-                    <a href="#">
+                    <a href="withdraw-profits.html">
                         Withdraw Profits                    </a>
                 </h2>
             </div>
-            <div class="section-field  wow rotateIn" data-wow-duration="2s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="6s">
                 <h2>
                     <a href="#">
                         My Hotel Info
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow rotateIn" data-wow-duration="2s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="6s">
                 <h2>
-                    <a href="#">
-                        My Hotel Guests Report
-                    </a>
+                    <a href="forget-password.html">
+forget password                    </a>
                 </h2>
             </div>
-            <div class="section-field  wow rotateIn" data-wow-duration="2s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="7s">
                 <h2>
                     <a href="#">
                         Hotel Cities Report                    </a>
                 </h2>
             </div>
-            <div class="section-field  wow rotateIn" data-wow-duration="2s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="7s">
                 <h2>
                     <a href="#">
                         Hotel Rooms Report
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow rotateIn" data-wow-duration="2s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="8s">
                 <h2>
                     <a href="#">
                         Offer Of The Month
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow rotateIn" data-wow-duration="2s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="8s">
                 <h2>
                     <a href="#">
                         Withdraw Profits                    </a>
