--- a/empty.html
+++ b/empty.html
@@ -25,7 +25,7 @@
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
                 <div class="text-second-logo" >
-                    <h2  class="wow slideInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                    <h2  class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
@@ -38,7 +38,7 @@
             <div class="addational-register">
                 <div class="language btn">
                     <label for="language-switcher"></label>
-                    <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" data-wow-delay="1s">
+                    <select name="#" id="language-switcher" class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
                         <option value="#">
                             English</option>
                         <option value="#">Arabic</option>
@@ -55,7 +55,7 @@
             <!--        addational-register-->
         </div>
         <nav class="nav-bottom">
-            <ul class="wow fadeInDownBig" data-wow-duration="1s" data-wow-delay="1s">
+            <ul class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
                 <li><a href="index.html">
                     Home
                 </a></li>
@@ -75,6 +75,7 @@
         </nav>
     </div>
 </section>
+
 <!-- end of nav-->
 <!-- start of form-->
 <section id="sections-empty">
