we added some animations to pages and menu mobile

--- a/my-hotel-info.html
+++ b/my-hotel-info.html
@@ -26,7 +26,7 @@
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
                 <div class="text-second-logo" >
-                    <h2  class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
+                    <h2  class="wow slideInLeft" data-wow-duration="1s" >
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
@@ -39,7 +39,7 @@
             <div class="addational-register">
                 <div class="language btn">
                     <label for="language-switcher"></label>
-                    <select name="#" id="language-switcher" class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
+                    <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
                         <option value="#">
                             English</option>
                         <option value="#">Arabic</option>
@@ -54,9 +54,15 @@
                 </div>
             </div>
             <!--        addational-register-->
+
+        </div>
+        <div class="menu-mobile">
+            <a class="icon-span">
+                <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="50px" height="50px">
+            </a>
         </div>
         <nav class="nav-bottom">
-            <ul class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
+            <ul class="wow fadeInLeft" data-wow-duration="3s" data-wow-delay="2" >
                 <li><a href="index.html">
                     Home
                 </a></li>
