--- a/index.html
+++ b/index.html
@@ -51,9 +51,15 @@
                 </div>
             </div>
             <!--        addational-register-->
+
+        </div>
+        <div class="menu-mobile">
+            <a class="icon-span">
+                <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="50px" height="50px">
+            </a>
         </div>
         <nav class="nav-bottom">
-            <ul class="wow fadeInDownBig" data-wow-duration="1s" >
+            <ul class="wow fadeInLeft" data-wow-duration="3s" data-wow-delay="2" >
                 <li><a href="index.html">
                     Home
                 </a></li>
