we added rtl pages to support arabic language abd created main page

--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -244,13 +244,13 @@
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="#">
+                <a href="index.html">
                     Copyright© Direct. All Rights Reserved.terms&conditions
                 </a>
             </h3>
         </div>
         <div class="copyright-logo">
-            <img src="img/footer-logo.png"  class="wow rotateIn" data-wow-duraton="2s"  alt="footer-logo">
+            <img src="img/footer-logo.png"  class="wow fadeOutLeft" data-wow-duraton="2s"  alt="footer-logo">
         </div>
     </div>
 </footer>
