--- a/index-rtl.html
+++ b/index-rtl.html
@@ -7,7 +7,7 @@
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-rtl.css">
 </head>
 <body>
 
@@ -24,10 +24,10 @@
                 <img src="img/second-logo.png" alt="logo">
                 <div class="text-second-logo" >
                     <h2  class="wow slideInLeft" data-wow-duration="1s" >
-                        <span>Pyramid Challenge</span>
-                        <span>Digital Hotels</span>
+                        <span>التحدي الهرمي </span>
+                        <span> الفنادق الحديثة </span>
                     </h2>
-                    <p>for best content view , go to desktop , laptop </p>
+                    <p>من اجل منظر احسن انظر سطح الديسكتوب  </p>
                 </div>
                 <!--          text-second-logo  -->
             </div>
@@ -38,16 +38,16 @@
                     <label for="language-switcher"></label>
                     <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
                         <option value="#">
-                            English</option>
-                        <option value="#">Arabic</option>
+                            العربية</option>
+                        <option value="#">الاتكليزية </option>
 
                     </select>
                 </div>
                 <div class="register btn">
-                    <a  href="#">Register New Guest</a>
+                    <a  href="#">تسجيل الدخول كزائر</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="#">Sign in</a>
+                    <a  href="#">سجل الان </a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -60,20 +60,20 @@
         </div>
         <nav class="nav-bottom">
             <ul class="wow fadeInLeft" data-wow-duration="3s" data-wow-delay="2" >
-                <li><a href="index.html">
-                    Home
+                <li><a href="index-rtl.html">
+                    الصفحة الرئيسية
                 </a></li>
                 <li><a href="about-us.html">
-                    About Us
+                    من نحن
                 </a></li>
                 <li><a href="empty.html">
-                    Buy Digital Key
+                    اشتري مفتاح الالكتروني
                 </a></li>
                 <li><a href="empty.html">
-                    FAQ
+                    اللائحة
                 </a></li>
                 <li><a href="contact.html">
-                    Contact Us
+                    اتصل بنا
                 </a></li>
             </ul>
         </nav>
@@ -83,24 +83,26 @@
 <!-- end of nav-->
 <!-- start of form-->
 <section id="form">
-        <div class="form-title">
-            <h2><a href="#">
-                Login To Your Hotel Account
-            </a></h2>
-        </div>
+<div class="container">
+    <div class="form-title">
+        <h2><a href="#">
+            الدخول للايميل الخاص بالفندق
+        </a></h2>
+    </div>
+</div>
 
     <div class="container">
 
-    <form action="#" class="form">
+        <form action="#" class="form">
             <div class="form-group wow rotateInUpLeft"  data-wow-duration="1s" >
                 <label for="number"></label>
-                <input type="text" class="form-control" id="number" placeholder="Enter your hotel number">
+                <input type="text" class="form-control" id="number" placeholder="ادخل رقم الفندق">
             </div>
             <div class="form-group wow rotateInUpLeft"  data-wow-duraton="1s">
                 <label for="password"></label>
-                <input type="password" class="form-control"  id="password" placeholder="Enter your hotel password">
+                <input type="password" class="form-control"  id="password" placeholder="ادخل باسورد الفندق">
             </div>
-            <button class="submit wow rollOut"  data-wow-duraton="1s"  >Sign Up</button>
+            <button class="submit wow rollOut"  data-wow-duraton="1s"  >سجل </button>
         </form>
     </div>
 </section>
@@ -110,7 +112,7 @@
         <div class="copyright">
             <h3>
                 <a href="index.html">
-                    Copyright© Direct. All Rights Reserved.terms&conditions
+                    كل الحقوق محفوظة لشركة ديراكت
                 </a>
             </h3>
         </div>
