--- a/my-hotel-info.html
+++ b/my-hotel-info.html
@@ -140,7 +140,7 @@
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="#">
+                <a href="index.html">
                     Copyright© Direct. All Rights Reserved.terms&conditions
                 </a>
             </h3>
