--- a/cities.html
+++ b/cities.html
@@ -30,6 +30,7 @@
             <!--        logo -->
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
+                <img src="img/second-logo2.png" alt="">
                 <div class="text-second-logo" >
                     <h2  class="wow slideInLeft" data-wow-duration="1s" >
                         <span>Pyramid Challenge</span>
