--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
             <!--        logo -->
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
+                <img src="img/second-logo2.png" alt="">
                 <div class="text-second-logo" >
                     <h2  class="wow slideInLeft" data-wow-duration="1s" >
                         <span>Pyramid Challenge</span>
@@ -127,7 +128,7 @@
 
                 </textarea>
             </div>
-            <button class="submit">Sign Up</button>
+            <button class="submit">Submit</button>
         </form>
     </div>
 </section>
