--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <!--        logo -->
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
+                <img src="img/second-logo2.png" alt="">
                 <div class="text-second-logo" >
                     <h2  class="wow slideInLeft" data-wow-duration="1s" >
                         <span>Pyramid Challenge</span>
@@ -36,12 +37,10 @@
             <div class="addational-register">
                 <div class="language btn">
                     <label for="language-switcher"></label>
-                    <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
-                        <option value="#">
-                            English</option>
-                        <option value="#">Arabic</option>
-
-                    </select>
+                    <ul name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
+                       <li><a href="index-rtl.html"><img src="img/egypt.png" width="30" alt="">Arabic</a></li>
+                        <li><a href="index.html"><img src="img/usa.jpg" width="30" alt="">English</a></li>
+                    </ul>
                 </div>
                 <div class="register btn">
                     <a  href="#">Register New Guest</a>
