--- a/register-new-guest.html
+++ b/register-new-guest.html
@@ -6,11 +6,9 @@
 
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
-    <link rel="stylesheet" href='css/animate.css'>
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-
-    <link rel="stylesheet" href="css/info/custom-style.css">
-
+    <link rel="stylesheet" href="css/info/register-new-guest.css">
 </head>
 <body>
 
@@ -40,12 +38,10 @@
             <div class="addational-register">
                 <div class="language btn">
                     <label for="language-switcher"></label>
-                    <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
-                        <option value="#">
-                            English</option>
-                        <option value="#">Arabic</option>
-
-                    </select>
+                    <ul name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
+                        <li><a href="index-rtl.html"><img src="img/egypt.png" width="30" alt="">Arabic</a></li>
+                        <li><a href="index.html"><img src="img/usa.jpg" width="30" alt="">English</a></li>
+                    </ul>
                 </div>
                 <div class="register btn">
                     <a  href="#">Register New Guest</a>
@@ -86,54 +82,23 @@
 
 <!-- end of nav-->
 <!-- start of form-->
-<section id="sections">
-<!--
--->
+<section id="form">
+    <div class="form-title">
+        <h2><a href="#">
+         Register New Guest
+        </a></h2>
+    </div>
+
     <div class="container">
-        <div class="section-back">
-            <a href="about-us.html">Back to Hotel  Sections</a>
-        </div>
-        <div class="section-title">
-            <h2><a href="#">
-                My Hotel Info:
-            </a></h2>
-        </div>
-        <div class="hotel-info">
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1s">
-                Hotel Owner Name :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
-                Email : Phone :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
-                 Phone :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
-                Birth Date :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="4s">
-                Country :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="4s" >
-                Gender :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="5s">
-                Hotel Open Date :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="5s">
-            </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="6s">
-                You Have Registered as a Guest in Hotel Number :
-                <span>xxxxxx</span>
-            </h3>
-        </div>
+
+        <form action="#" class="form">
+            <div class="form-group wow rotateInUpLeft"  data-wow-duration="1s" >
+                <label for="number"></label>
+                <input type="text" class="form-control" id="number" placeholder="Enter partner hotel number (how invite you) ">
+            </div>
+
+            <a href="about-us.html" class="submit wow rollOut"  data-wow-duraton="1s"  >Next Step</a>
+        </form>
     </div>
 </section>
 <!-- end of form -->
@@ -147,7 +112,7 @@
             </h3>
         </div>
         <div class="copyright-logo">
-            <img src="img/footer-logo.png" alt="footer-logo">
+            <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
         </div>
     </div>
 </footer>
